@@ -18,7 +18,7 @@ If your database connection is successful, but the tables aren't showing up in t
 
    - If Metabase is taking a long time to sync, go to [Troubleshooting syncs and scans](./sync-fingerprint-scan.md).
 
-2. Go to **Admin** > **Troubleshooting** > **Logs** to check if Metabase failed to sync [due to an error](#common-database-connection-errors).
+2. Go to **Admin** > **Tools** > **Logs** to check if Metabase failed to sync [due to an error](#common-database-connection-errors).
 
    - If the logs feel overwhelming, check out [How to read the server logs](./server-logs.md).
 
@@ -32,7 +32,7 @@ If you don't have access to the Metabase Admin panel, you'll need to ask the per
 
    - If you can access the server from a bastion host or another machine, [check if your Metabase's IP address has access to your database server](#checking-your-server-access).
 
-   - If you're running Metabase Cloud, check that you've [whitelisted our IP addresses](https://www.metabase.com/docs/latest/cloud/ip-addresses-to-whitelist).
+   - If you're running Metabase Cloud, check that you've [whitelisted our IP addresses](../cloud/ip-addresses-to-whitelist.md).
 
 3. Make sure that Metabase is using a role with the necessary privileges to connect to your data warehouse. See [Granting database privileges](../databases/users-roles-privileges.md).
 
@@ -52,7 +52,7 @@ If you see this error message in the Metabase interface, go to [Troubleshooting 
 
 ### Connections cannot be acquired from the underlying database
 
-If you see this error messages in the [logs](./server-logs.md) (**Admin** > **Troubleshooting** > **Logs**):
+If you see this error messages in the [logs](./server-logs.md) (**Admin** > **Tools** > **Logs**):
 
 1. Go to **Admin** > **Databases** and select your database.
 2. Go to **Advanced options** > **Additional JDBC connection string options** and add `trustServerCertificate=true`.
@@ -80,7 +80,7 @@ To verify that your Metabase's IP address can access the database server:
 
 1. Use the [netcat](https://en.wikipedia.org/wiki/Netcat) command `nc` (or your operating system’s equivalent) to check if you can connect to the host on a given port. Note that different databases use different ports by default.
 
-2. If you're running Metabase Cloud, check that you've [whitelisted our IP addresses](https://www.metabase.com/docs/latest/cloud/ip-addresses-to-whitelist).
+2. If you're running Metabase Cloud, check that you've [whitelisted our IP addresses](../cloud/ip-addresses-to-whitelist.md).
 
 3. Check that your database credentials are correct.
 
@@ -105,6 +105,16 @@ psql -h HOSTNAME -p PORT -d DATABASENAME -U DATABASEUSER
    ```sql
    SELECT 1
    ```
+
+## Snowflake error when running via JAR file
+
+If you're connecting to Snowflake and encounter an error like, `JDBC driver internal error: exception creating result` and are running from the JAR file, add `--add-opens java.base/java.nio=ALL-UNNAMED` to your `java` command:
+
+```
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
+```
+
+See the docs on [running the Metabase jar file](../installation-and-operation/running-the-metabase-jar-file.md).
 
 ## Related problems
 
